fixtures/semantic/invalid/recovery/broken-type.php
<?php
function prompt33_broken_type(?): void
{
    return;
}
